--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#673AB7"
     tools:context=".activity.SupportActivity">
 
     <EditText
@@ -27,47 +28,48 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
-        android:layout_width="669dp"
-        android:layout_height="178dp"
+        android:layout_width="330dp"
+        android:layout_height="74dp"
         android:ems="10"
         android:fontFamily="casual"
         android:inputType="textPersonName"
         android:text="If you have any enquries, "
         android:textColor="#FFFFFF"
-        android:textSize="55sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.641"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.681" />
+        app:layout_constraintVertical_bias="0.662" />
 
     <EditText
         android:id="@+id/editTextTextPersonName7"
-        android:layout_width="694dp"
-        android:layout_height="131dp"
+        android:layout_width="374dp"
+        android:layout_height="59dp"
         android:ems="10"
         android:fontFamily="casual"
         android:inputType="textPersonName"
         android:text="PLEASE CONTACT US AT +60123456789"
         android:textColor="#FFFFFF"
-        android:textSize="37sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.703"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808" />
+        app:layout_constraintVertical_bias="0.792" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="684dp"
-        android:layout_height="436dp"
+        android:layout_width="287dp"
+        android:layout_height="291dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.344"
+        app:layout_constraintVertical_bias="0.327"
         app:srcCompat="@drawable/support" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
